--- a/header.html
+++ b/header.html
@@ -30,8 +30,13 @@
                                             </a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link dropdown-toggle arrow-none" href="https://info.uniswap.org/token/0x3d46454212c61ecb7b31248047fa033120b88668" role="button" target="blank">
-                                                Uniswap
+                                            <a class="nav-link dropdown-toggle arrow-none" href="./mvteth.html" role="button" target="blank">
+                                                MVT/ETH LP
+                                            </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link dropdown-toggle arrow-none" href="./mdteth.html" role="button" target="blank">
+                                                MDT/ETH LP
                                             </a>
                                         </li>
 
