--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 							<div class="col-lg-4">
 								<div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
 									<div class="d-flex features-icons-icon" data-aos="fade"><i class="icon-drop m-auto text-primary" data-bss-hover-animate="pulse"></i></div>
-									<h3><a href="https://movementdao.finance/mvt.html">STAKE MVT/ETH LPs</a></h3>
+									<h3><a href="./mvt.html">STAKE MVT/ETH LPs</a></h3>
 									<p class="lead mb-0">Season 2: Liquidity Provider Rewards&nbsp;</p>
 									<p class="lead mb-0">Need LPs? Add Liquidity <a href="https://info.uniswap.org/token/0x3d46454212c61ecb7b31248047fa033120b88668">Here!</a></p>
 								</div>
@@ -126,17 +126,12 @@
 							<div class="col-lg-4">
 								<div class="mx-auto features-icons-item mb-5 mb-lg-0 mb-lg-3">
 									<div class="d-flex features-icons-icon"><i class="icon-drop m-auto text-primary" data-bss-hover-animate="pulse"></i></div>
-									<h3><a href="https://movementdao.finance/mdt.html">STAKE MDT/ETH LPs</a></h3>
+									<h3><a href="./mdt.html">STAKE MDT/ETH LPs</a></h3>
 									<p class="lead mb-0">Season 2: Liquidity Provider Rewards&nbsp;</p>
 									<p class="lead mb-0">Need LPs? Add Liquidity <a href="https://uniswap.info/token/0x32a087d5fdf8c84ec32554c56727a7c81124544e">Here!</a></p>
 								</div>
 							</div>
-							<div class="col-lg-4">
-									<h3><a href="https://docs.movementdao.io">Season 3</a></h3>
-									<p class="lead mb-0">Coming Soon!&nbsp;</p>
-									<p class="lead mb-0"><a href="https://talk.mvt.io/">Learn More.</a></p>
-								</div>
-							</div>
+							
 						</div>
 
 
