--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 					
 
 						<div class="col-sm-6 col-12 text-center">
-							<h3 class="text-success"><a href="./mvt.html">STAKE MVT/ETH LPs</a></h6>
+							<h3 class="text-success"><a href="./mvteth.html">STAKE MVT/ETH LPs</a></h6>
 							<h3 class="text-dark supply-balance">Season 2: Liquidity Provider Rewards </h3>
 						</div>
 						<div class="col-sm-6 col-12 text-center">
-							<h3 class="text-success"><a href="./mdt.html">STAKE MDT/ETH LPs</a></h6>
+							<h3 class="text-success"><a href="./mdteth.html">STAKE MDT/ETH LPs</a></h6>
 							<h3 class="text-dark borrow-balance">Season 2: Liquidity Provider Rewards </h3>
 						</div>
 						
