--- a/mdteth.html
+++ b/mdteth.html
@@ -61,7 +61,7 @@
 	<script src="assets/js/staking.js?5"></script>
 	
 	<script type="text/javascript">
-		var page = 'staking';
+		var page = 'staking2';
 		
 	</script>
 </head>
