--- a/index.html
+++ b/index.html
@@ -144,25 +144,23 @@
 					<div class="row coins_container">
 
 
-						<div class="col-xl-6 mb-5">
-							<h3>MVT/ETH LP Power</h3>
-							<div class="supplies_container" id="supplies_container">
-
+						<div class="col-sm-6 col-12 text-center">
+							<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+								<h6 class="text-dark">Total Stake (LP)</h6>
+								<h3 class="text-dark uniswap-total-stake"><i class='bx bx-loader-circle bx-spin'></i></h3>
 							</div>
-
-
-
-						</div>
-
-
-						<div class="col-xl-6 mb-5">
-							<h3>MDT/ETH LP Power</h3>
-							<div class="borrows_container" id="borrows_container">
-
+							<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+								<h6 class="text-dark">Total Stake Power</h6>
+								<h3 class="text-dark totalStakedPower"><i class='bx bx-loader-circle bx-spin'></i></h3>
 							</div>
-
-
-
+							<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+								<h6 class="text-dark">Your Stake Power</h6>
+								<h3 class="text-dark stakerPower"><i class='bx bx-loader-circle bx-spin'></i></h3>
+							</div>
+							<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+								<h6 class="text-dark">Available to Claim (MVT)</h6>
+								<h3 class="text-dark mvt-to-claim"><i class='bx bx-loader-circle bx-spin'></i></h3>
+							</div>
 						</div>
 					</div>
 					<!-- end row -->
