--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
 							<h6 class="text-dark">Total Stake Power</h6>
 							<h3 class="text-dark totalStakedPower"><i class='bx bx-loader-circle bx-spin'></i></h3>
 						</div>
-						<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+						<div class="col-sm-6 col-12 text-center">
 							<h6 class="text-dark">Total Stake (LP)</h6>
 							<h3 class="text-dark uniswap-total-stake"><i class='bx bx-loader-circle bx-spin'></i></h3>
 						</div>
-						<div class="col-lg-2 col-md-4 col-sm-6 col-12 text-center">
+						<div class="col-sm-6 col-12 text-center">
 							<h6 class="text-dark">Total Stake Power</h6>
 							<h3 class="text-dark totalStakedPower"><i class='bx bx-loader-circle bx-spin'></i></h3>
 						</div>
