hmm see if this works

--- a/mvteth.html
+++ b/mvteth.html
@@ -53,7 +53,7 @@
 	<script src="assets/js/bignumber.min.js"></script>
     <script src="./assets/js/pages.js"></script>
 	<script src="assets/js/metamask.js"></script>
-	<!--<script src="assets/js/metamask-goerli.js"></script>-->
+	<script src="assets/js/metamask-goerli.js"></script>
 	<script src="assets/js/abi/UniswapMining.js"></script>
 	<script src="assets/js/abi/erc20.js"></script>
 	<script src="assets/js/abi/MVTLp.js"></script>
