--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<script src="assets/js/staking.js?5"></script>
 
 	<script type="text/javascript">
-		var page = 'main';
+		var page = 'movement';
 
 	</script>
 </head>
